--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
-  port: 8080
+  port: 8082
   shutdown: graceful
+
+spring:
+  redis:
+    host: localhost
+    port: 6379
 
 #spring:
 #  r2dbc:
