--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ server:
 spring:
   servlet:
     multipart:
-      max-file-size: 1024MB
-      max-request-size: 1024MB
+      max-file-size: 1MB
+      max-request-size: 1MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${DB_URL}
@@ -49,6 +49,6 @@ cloud:
       static: ap-northeast-2
       auto: false
     credentials:
-      access-Key: AKIAVQO2VDIU27MZ5W6A
-      secret-Key: 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
+      access-Key: ${AWS_ACCESS_KEY}
+      secret-Key: ${AWS_SECRET_KEY}
 
