review 상태 체크 및 리뷰 올리기

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,3 +50,9 @@ cloud:
       access-Key: ${AWS_ACCESS_KEY}
       secret-Key: ${AWS_SECRET_KEY}
 
+logging:
+  level:
+    com:
+      amazonaws:
+        util:
+          EC2MetadataUtils: error
