--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
   tomcat:
     max-swallow-size: 2024MB
   shutdown: graceful
+  address: 192.168.0.6
 
 spring:
   servlet:
@@ -21,7 +22,6 @@ spring:
       host: ${MONGO_DB_HOST:localhost}
       port: ${MONGO_DB_PORT:27017}
       database: ${MONGO_DB_DATABASE:test}
-      password: ${MONGO_DB_PASSWORD}
     sql:
       init:
         mode: always
