--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,9 +18,10 @@ spring:
     port: 6379
   data:
     mongodb:
-      host: ${MONGO_DB_HOST:localhost}
-      port: ${MONGO_DB_PORT:27017}
-      database: ${MONGO_DB_DATABASE:test}
+#      host: ${MONGO_DB_HOST:localhost}
+#      port: ${MONGO_DB_PORT:27017}
+#      database: ${MONGO_DB_DATABASE:test}
+      uri: mongodb://mongo:27017/test
     sql:
       init:
         mode: always
